infra/k8s/consumer-logwriter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ksci-logwriter
  labels:
    app: ksci-logwriter
spec:
  selector:
    matchLabels:
      app: ksci-logwriter
  template:
    metadata:
      labels:
        app: ksci-logwriter
    spec:
      containers:
        - name: ksci-logwriter
          image: larcher/ksci-consumer
          command: ["/usr/local/bin/logwriter"]
