infra/k8s/consumer-statuschange.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ksci-statuschange
  labels:
    app: ksci-statuschange
spec:
  selector:
    matchLabels:
      app: ksci-statuschange
  template:
    metadata:
      labels:
        app: ksci-statuschange
    spec:
      containers:
        - name: ksci-statuschange
          image: larcher/ksci-consumer
          command: ["/usr/local/bin/statuschange"]
