infra/k8s/consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ksci-consumer
  labels:
    app: ksci-consumer
spec:
  selector:
    matchLabels:
      app: ksci-consumer
  template:
    metadata:
      labels:
        app: ksci-consumer
    spec:
      containers:
        - name: ksci-consumer
          image: larcher/ksci-consumer
