infra/k8s/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ksci-worker
  labels:
    app: ksci-worker
spec:
  selector:
    matchLabels:
      app: ksci-worker
  template:
    metadata:
      labels:
        app: ksci-worker
    spec:
      containers:
        - name: ksci-worker
          image: larcher/ksci
          command: ["celery", "-A", "ksci.tasks", "worker", "--loglevel=INFO"]
