infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ksci
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: ksci-api
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ksci-frontend
                port:
                  number: 80
